# bravely-default-mod

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Makefile  README.md  cli.py  crowd.sh  environment.yaml  gui.py  pyproject.toml  release.py  requirements.txt  settings.json
.claude/commands/: build-mod.md  decrypt-btb2.md  ghidra-decompile.md  launch.md  mod-log.md
BravelyMod/: BravelyMod.csproj  Core.cs
BravelyMod/AutoBattle/: BattleState.cs  ProfileConfig.cs  RuleEngine.cs
BravelyMod/Config/: autobattle_schema.md  music_template.yaml
BravelyMod/Patches/: BPPatch.cs  ColonyPatch.cs  DamagePatch.cs  ExpPatch.cs  NativeAutoBattlePatch.cs  NativeAutoLootPatch.cs  NativeBPPatch.cs  NativeBattleSpeedPatch.cs  NativeBraveSubmenuPatch.cs  NativeBuffPatch.cs  NativeButtonSwapPatch.cs  NativeColonyPatch.cs  NativeDamageCapPatch.cs  NativeEncounterPatch.cs  NativeExpPatch.cs  NativeJobSwapPatch.cs  (+10 more)
arcanist/: __init__.py
crowd/: cli.py
data/: NATIVE_HOOK_TARGETS.md  REVERSE_ENGINEERING_NOTES.md  bravely-default-cover.ascii  empty_regions.json
ghidra/: 999k-limit-patch.py
ghidra_scripts/: 999k-limit-patch.py  find_empty_addresses.py  free_memory_addr.json  import_il2cpp_labels.py
notebooks/: crowd_data_buff_limit.ipynb  crowd_overrides.yaml
patches/: always_hasten_world_patch.py
scripts/: convert_music.sh  headless_launch.sh  music_server.py  regression_test.sh  regression_test_web.sh  relaunch_bdffhd.sh  setup_melonloader.sh  start_music_server.bat  start_music_server.sh  test_headless.sh  test_mod.sh
src/: ROM.py  Utilities.py
tests/: README.md
(+18 files in other folders)
