[project]
name = "arcanist"
version = "0.1.0"
description = "Bravely Default HD remaster modding toolkit"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
btb2 = ["brotli>=1.1"]

[project.scripts]
btbf = "arcanist.btbf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
